etherpad/etherpad-ingress-octavia.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-ingress-bmangesh
  namespace: code-server
  annotations:
    kubernetes.io/ingress.class: "openstack"
    octavia.ingress.kubernetes.io/internal: "false"
spec:
  rules:
  - host: etherpad.sredevstack.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: etherpad-sre
             port:
               number: 80
